Updated language and image alt

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
     <meta charset="utf-8">
@@ -26,7 +26,7 @@
             <header>
               <h3>Hello!</h3>
             </header>
-            <img src="images/profile.jpg" class="image-circle">
+            <img src="images/profile.jpg" class="image-circle" alt="">
             <p> My name is Hannah Mulato and I am a software developer student living in Gaithersburg, Maryland. </p>
             <p> As a recent Biotechnology graduate, I'm interested in:</p>
             <ul>
@@ -64,7 +64,7 @@
               <li><a href="https://www.linkedin.com/in/hannah-mulato-62487173/">LinkedIn</a></li>
               <li><a href="https://github.com/hpeninah">GitHub</a></li>
             </ol>
-            <img src="images/gburgmap.png">
+            <img src="images/gburgmap.png" alt="">
           </section>
         </article>
       </div>            
