Revision of header and article

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@
     <main>
       <div>
         <article>
-
+         <h2>Welcome!</h2>
   <!-- Intro section, who you are, where you are located -->
 
           <section class="intro">
-            <header>
-              <h3>Hello!</h3>
-            </header>
+            <h3>Hello!</h3>
             <img src="images/profile.jpg" class="image-circle" alt="">
             <p> My name is Hannah Mulato and I am a software developer student living in Gaithersburg, Maryland. </p>
             <p> As a recent Biotechnology graduate, I'm interested in:</p>
@@ -42,9 +40,7 @@
 <!-- About Me section, description showing passion for web development and willingness to work with others, 1-2 sentences describing other interests -->
 
           <section class="about">
-            <header>
-              <h3> About Me </h3>
-            </header>
+            <h3> About Me </h3>
             <p>After graduating college, I became interested in coding and software development. While I continue to have interest in Biotechnology, I believe that having knowledge in software development can boost my career.</p>
             <p> One of my greatest hobbies is Volleyball and I am currently coaching at a local high school. It is a passion that has evolved as I enjoy teaching others how to play.</p>
             <p> I've started my journey to becoming a software developer with the resources <a href="https://www.thinkful.com">Thinkful</a> provides and am excited to see what I can learn. </p>
@@ -56,9 +52,7 @@
 <!-- Contact section, link to LinkedIn profile, link to GitHub Profile, link to email -->
 
           <section class="contact">
-            <header>
-              <h3> Contact Information </h3>
-            </header>
+            <h3> Contact Information </h3>
             <p>Please feel free to <strong>contact</strong> or <strong>follow</strong> me through the following:</p>
             <ol>
               <li><a href="https://www.linkedin.com/in/hannah-mulato-62487173/">LinkedIn</a></li>
