Updated Welcome header

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <main>
       <div>
         <article>
-         <h2>Welcome!</h2>
+         <h2><strong>Welcome</strong></h2>
   <!-- Intro section, who you are, where you are located -->
 
           <section class="intro">
